# aimet_playground

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
docs/: evaluation.md  quantization.md  quantization_guide.md
scripts/: upload_large_file.py
tests/: smoothquant_test.py
